Working towards pypi intermediate commit

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,12 @@
     "git.ignoreLimitWarning": true,
     "cmake.configureOnOpen": true,
     "cmake.configureArgs": [
-        "-DCMAKE_FF=ON", "-DCMAKE_FD=ON", "-DCMAKE_VAL=ON", 
+        "-DUSE_SUPERBUILD=ON",
+        "-DCMAKE_FF_CXX=OFF",
+        "-DCMAKE_FF_PYWRAPPER=OFF",
+        "-DCMAKE_FD=OFF",
+        "-DCMAKE_VAL=OFF",
+        "-DCMAKE_TARSKI=OFF",
         "-DCMAKE_DOXYGEN_DOCS=OFF", 
         "-DCMAKE_DOXYGEN_FLAT_THEME=OFF",
         "-DCMAKE_DOXYGEN_AWESOME_THEME=OFF",
