--- a/src/eval_node/heuristic/CMakeLists.txt
+++ b/src/eval_node/heuristic/CMakeLists.txt
@@ -16,32 +16,11 @@ target_sources(LAPKT
         landmark_graph_manager.hxx
         layered_h_max.hxx
         rp_heuristic.hxx
-    )
+)
 target_include_directories(LAPKT
     PUBLIC
         $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
-        $<INSTALL_INTERFACE:include>
-    )
+        $<INSTALL_INTERFACE:${CMAKE_INSTALL_PREFIX}/package/core/include>
+)
 
-install(
-    FILES 
-        bs_graph.hxx
-        ff_rp_heuristic.hxx
-        h_1.hxx
-        h_2.hxx
-        h_C.hxx
-        h_null.hxx
-        h_unsat.hxx
-        h_unsat_mutex.hxx
-        heuristic.hxx
-        landmark_count.hxx
-        landmark_graph.hxx
-        landmark_graph_generator.hxx
-        landmark_graph_manager.hxx
-        layered_h_max.hxx
-        rp_heuristic.hxx
-    DESTINATION
-    ${CMAKE_INSTALL_PREFIX}/package/lapkt/_cxx/include
-    COMPONENT
-        Development EXCLUDE_FROM_ALL
-    )
+
